Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.1
-
NetBSD planets 8.99.21 NetBSD 8.99.21 (GENERIC) #0: Fri Jul 13 14:49:46 IDT 2018 fly@planets:/tmp/build3/sys/arch/amd64/compile/GENERIC amd64
RHEL 7
-
-
b4beb74d93fee205b624c0f0ae6ea39d88d471ac (qt/qtlocation/5.11)
Description
The following error happens when building with GCC 4.8.5:
declarativemaps/qdeclarativegeomap.cpp: In member function 'void QDeclarativeGeoMap::mappingManagerInitialized()': declarativemaps/qdeclarativegeomap.cpp:699:91: error: no matching function for call to 'QDeclarativeGeoMap::connect(QPointer<QGeoMap>&, void (QGeoMap::*)(const QString&), QDeclarativeGeoMap::mappingManagerInitialized()::__lambda8)' [©rightString](const QString ©){ copyrightString = copy; }); ^
Full build log for similar setup: https://us-east.manta.joyent.com/pkgsrc/public/reports/Linux/el7/trunk/x86_64/20180717.0007/qt5-qtlocation-5.11.1/build.log
Similar report in forums: https://forum.qt.io/topic/91073/failed-to-build-qt-5-11-0-from-source-on-centos-7-but-no-problem-with-qt-5-10-1/16
It's apparently a compiler bug fixed in GCC 5.x and later.
However, working around it is not very costly, and GCC 4.8 is supposed to be supported.
The patch was suggested by thiago on qt irc.