fix: workaround GCC < 5.x bugs in implicit casts

The following error happens when building with GCC 4.8.5:

    no matching function for call to ‘QObject::connect(QPointer<T>&, ...)’
    no matching function for call to ‘QObject::disconnect(QPointer<T>&, ...)’

There is a simular problem in qtlocation, see Qt bug report:

    https://bugreports.qt.io/browse/QTBUG-69512

It's apparently a compiler bug fixed in GCC 5.x and later.

Signed-off-by: Stephan Linz <linz@li-pro.net>